Change the pmp-library submodule URL from ssh to https
The pmp-library submodule was linked via git@github.com URL which
requires a Github login.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://www.graphics.rwth-aachen.de:9000/OpenVolumeMesh/OpenVolumeMesh.git
 [submodule "external/pmp-library"]
 	path = external/pmp-library
-	url = git@github.com:pmp-library/pmp-library.git
+	url = https://github.com/pmp-library/pmp-library.git
 [submodule "external/spectra"]
 	path = external/spectra
 	url = https://github.com/yixuan/spectra.git
